# reworldmedia-ga4-importer

./: .dockerignore  .env.example  .env.yaml  .gitignore  Dockerfile  PROJECT-OVERVIEW.md  README.md  ga4_reports_config.json  pyproject.toml  requirements.txt  spec.json
app/: main.py
app/utils/: bigquery_utils.py  config.py  constants.py  gcp_clients.py  pubsub_utils.py  secret_manager.py  validation.py
