[project]
name = "python-flask"
version = "0.1.0"
description = "Start a simple web app with the Flask framework for Python"
authors = [{ name = "Google LLC" }]
requires-python = ">=3.11,<3.12"
dependencies = [
    "airbyte>=0.33.1",
    "google-cloud-storage>=2.18.2,<3",
    "google-cloud-secret-manager>=2.20.2,<3",
    "google-auth>=2.34.0,<3",
    "functions-framework>=3.8.1,<4",
    "google-cloud-logging>=3.11.2,<4",
    "google-api-core>=2.19.2,<3",
    "google-cloud-pubsub>=2.23.0,<3",
    "fastapi>=0.115.6,<0.116",
    "uvicorn>=0.34.0,<0.35",
    "tenacity>=8.0.0",
]

# Note: airbyte-source-google-analytics-data-api cannot be added here due to
# airbyte-cdk version conflicts. Install separately with:
# pip install airbyte-source-google-analytics-data-api

[project.scripts]
app = "src.main:main"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
